@@ -713,6 +713,8 @@ Rboolean PicTeXDeviceDriver(pDevDesc dd, const char *filename,
  *  debug   = Rboolean; if TRUE, write TeX-Comments into output.
  */
 
+extern void GEaddDevice2f(pGEDevDesc gdd, const char *name, const char *file);
+
 SEXP PicTeX(SEXP args)
 {
     pGEDevDesc dd;
@@ -740,7 +742,7 @@ SEXP PicTeX(SEXP args)
 	    error(_("unable to start %s() device"), "pictex");
 	}
 	dd = GEcreateDevDesc(dev);
-	GEaddDevice2(dd, "pictex");
+	GEaddDevice2f(dd, "pictex", file);
     } END_SUSPEND_INTERRUPTS;
     vmaxset(vmax);
     return R_NilValue;
